# facedetectcli

./: pyproject.toml  shell.nix
facedetectcli/: facedetect.py
