[tool.poetry]
name = "facedetectcli"
version = "0.1.0"
description = ""
authors = ["bretek <josephmadden999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
face-recognition = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
